--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* reset */
+*{
+  margin: 0px;
+  padding: 0px;
+}
 h1{
     font-family: "neuzeit-grotesk",sans-serif;
     font-size: 54px;
@@ -30,3 +35,26 @@ ul {
     align-content: space-between;
 
   }
+  .buttonOrange {
+    background-color: #f6c131;
+}
+.buttonSmall {
+  padding: 5px 10px;
+  font-size: 14px;
+}
+
+.button {
+  vertical-align: middle;
+}
+.buttonBig, .buttonLarge, .buttonSmall {
+  border-radius: 20px;
+  transition: all 0.2s linear;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  margin: 8px 0;
+  line-height: 1.15;
+}
+.textAlignCenter {
+  text-align: center;
+}
