--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ h1{
     text-align: center;
 
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
 #menu{
     background-color: darkseagreen;
     align-content: space-between;
@@ -65,7 +69,7 @@ ul {
   align-content: space-between;
   display: flex;
   padding: 0.5em;
-  border: 2px solid rgb(46, 120, 163);
+  border: 2px solid rgb(164, 217, 214);
   
 }
 form {
@@ -88,7 +92,7 @@ form {
 .A-propos{
   padding: 0.5em;
   background-color: rgb(63, 153, 205);
-  border: 2px solid rgb(46, 120, 163);
+  border: 2px solid rgb(46, 163, 67);
 }
 .projets{
   padding: 0.5em;
@@ -97,12 +101,12 @@ form {
 }
 .dates{
   padding: 0.5em;
-  background-color: rgb(63, 153, 205);
+  background-color: rgb(181, 63, 205);
   border: 2px solid rgb(46, 120, 163);
 }
 .calendar{
   padding: 0.5em;
-  background-color: rgb(63, 153, 205);
+  background-color: rgb(205, 101, 63);
   border: 2px solid rgb(46, 120, 163);
 }
 
@@ -113,6 +117,7 @@ form {
 }
 @media screen and (max-width: 600px) { 
   .menu { 
-    display: none; 
+    display: block;
+    width: 100%;
   } 
 }
