--- a/style.css
+++ b/style.css
@@ -1,57 +1,401 @@
-body
-{
-  display: flexbox;
-  gap: 20px;
-  columns: 25% 25% 25% 25%;
-  }
-nav a
-{
-    font-size: 1.3em;
-    color: #181818;
-    text-decoration: none;
-    
-}
-
-nav a:hover
-{
-    color: #760001;
-    border-bottom: 3px solid #760001;
-}
-
-
-
-.about{
-  display: flex;
-}
-.projets{
-  display: flex;
-}
-.caroussel{
-  display: flex;
-}
-.logo-box{
-  display: flex;
-}
-.logo{
-  width: auto;
-}
-.title{
-  font-size: 60px;
-  padding: 10px;
-  background-color: rgb(41,73,130);
-  color: #fff;
-  font: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-.image-sou{
-  display: flex;
-}
-.cards {
-  display: flex;
-}
-
-html {
+* {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  color: white;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+body {
+  
+  margin-bottom: auto;
+  margin-top: 2px;
+  margin-left: 2px;
+  margin-right: 2px;
 }
+/* ----------Header----------------------*/
+header {
+  background-color:turquoise;
+  gap: 2%;
+  align-items: center;
+ 
+}
+
+
+header a:hover {
+  color: cadetblue;
+}
+ul, li {
+  display: flex;
+  align-items: center;
+  background-color:turquoise;
+  width: 100%;
+  height: auto;
+}
+
+a {
+  list-style: none;
+  text-decoration: none;
+  color: white;
+}
+
+/* --------------- Navigation --------- Menu ----------*/
+/*.container {
+  max-width: 1050px;
+  width: 90%;
+  margin: auto;
+}
+*/
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  
+  font-family: 'Lobster', cursive;
+  
+  text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
+  padding: 50px;
+}
+
+.nav-container {
+  display: flex;
+  height: 80px;
+}
+
+.nav-flex {
+  display: flex;
+  gap: 2%;
+}
+/*
+.navbar .menu-items {
+  display: flex;
+}
+
+.navbar .nav-container li {
+  list-style: none;
+}
+
+.navbar .nav-container a {
+  text-decoration: none;
+  color: #0e2431;
+  font-weight: 500;
+  font-size: 1.2rem;
+  padding: 0.7rem;
+}
+
+.navbar .nav-container a:hover{
+    font-weight: bolder;
+}
+
+.nav-container {
+  display: block;
+  position: relative;
+  height: 80px;
+}
+
+.nav-container .checkbox {
+  position: absolute;
+  display: block;
+  height: 32px;
+  width: 32px;
+  top: 20px;
+  left: 20px;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.nav-container .hamburger-lines {
+  display: block;
+  height: 26px;
+  width: 32px;
+  position: absolute;
+  top: 25px;
+  left: 20px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-container .hamburger-lines .line {
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 10px;
+  background: #0e2431;
+}
+
+.nav-container .hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.navbar .menu-items {
+  padding-top: 120px;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  height: 100vh;
+  width: 100%;
+  transform: translate(-150%);
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+  padding-left: 50px;
+  transition: transform 0.5s ease-in-out;
+  text-align: center;
+}
+
+.navbar .menu-items li {
+  margin-bottom: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.nav-container input[type="checkbox"]:checked ~ .menu-items {
+  transform: translateX(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+  transform: scaleY(1);
+}
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line4 {
+  transform: scaleY(2);
+}
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line5 {
+  transform: scaleY(3);
+}
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line6 {
+  transform: rotate(-45deg);
+}
+
+*/
+
+
+/*-----------------------*/
+.logo {
+  width: max-content;
+  position: sticky;
+ 
+}
+.image {
+  width: auto;
+  height: auto;
+  
+  justify-content: center;
+  align-items: center;
+  
+}
+.card {
+  width: 25%;
+  
+}
+.events{
+  width: 25%;
+}
+
+/*main*/
+.angry-grid {
+   display: grid; 
+
+   grid-template-rows: 1fr;
+   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+   
+   gap: 2px;
+   box-sizing: content-box;
+   
+  width: 100%;
+   
+}
+  /* Nav Bar*/
+#item-0 {
+  
+
+   background-color: #8A99D9; 
+   grid-row-start: 2;
+   grid-column-start: 1;
+
+   grid-row-end: 3;
+   grid-column-end: 2;
+   ;
+   
+}
+/* Galerie photos roquemaure*/
+#item-1 {
+
+   background-color: #E9877E; 
+   grid-row-start: 2;
+   grid-column-start: 2;
+
+   grid-row-end: 3;
+   grid-column-end: 8;
+
+   display:flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 0.5%;
+   
+}
+/* Galerie photos manifestations passées*/
+#item-2 {
+
+   background-color: #9C55B7; 
+   grid-row-start: 3;
+   grid-column-start: 1;
+
+   grid-row-end: 8;
+   grid-column-end: 2;
+   
+   
+}
+/* Txt A propos de l'association / qui sommes-nous ?*/
+#item-3 {
+
+   background-color: #7D75DA; 
+   grid-row-start: 3;
+   grid-column-start: 2;
+
+   grid-row-end: 6;
+   grid-column-end: 7;
+
+   background-image: url(/images/img-header.png);
+
+   
+
+   
+}
+/* Galerie affiches*/
+#item-4 {
+
+   background-color: #677777; 
+   grid-row-start: 3;
+   grid-column-start: 7;
+
+   grid-row-end: 7;
+   grid-column-end: 8;
+
+   
+   background-attachment: scroll;
+   display:flex;
+   
+   justify-content: space-between;
+   align-items: center;
+   flex-direction: column;
+   padding: 0.5%;
+
+   
+   
+}
+/* Txt Les projets réalisés*/
+#item-6 {
+
+   background-color: #A55D56; 
+   grid-row-start: 6;
+   grid-column-start: 2;
+
+   grid-row-end: 7;
+   grid-column-end: 7;
+   
+}
+/* Image flyer planning des manifs */
+#item-7 {
+
+   background-color: #5FBA56; 
+   grid-row-start: 7;
+   grid-column-start: 7;
+
+   grid-row-end: 7;
+   grid-column-end: 7;
+   
+}
+/* contactez-nous */
+#item-8 {
+
+   background-color: #6555FA; 
+   grid-row-start: 7;
+   grid-column-start: 1;
+
+   grid-row-end: 8;
+   grid-column-end: 2;
+   
+}
+/* Documents d'inscriptions */
+#item-9 {
+
+   background-color: #598699; 
+   grid-row-start: 7;
+   grid-column-start: 2;
+
+   grid-row-end: 8;
+   grid-column-end: 4;
+   
+}
+/* Les liens */
+#item-10 {
+
+  background-color: #598699; 
+  grid-row-start: 7;
+  grid-column-start: 4;
+
+  grid-row-end: 8;
+  grid-column-end: 7;
+  
+}
+
+/*footer*/
+footer {
+  width: 100%;
+ 
+  background-color: turquoise;
+  
+ 
+  gap: 2%;
+}
+
+footer a:hover {
+  color: cadetblue;
+}
+
+
+/* Responsive */
+/*
+@media screen and (max-width: 900px) {
+  h1 {
+    font-size: 2rem;
+    position: relative;
+    top: 85%;
+    left: 50%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #space_between_cards {
+    margin-top: 6000px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .nav_meal_a {
+    font-size: 20px;
+  }
+}
+*/
+
