--- a/style.css
+++ b/style.css
@@ -1,23 +1,59 @@
 * {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  
   margin: 0;
   padding: 0;
-  color: white;
+  
 }
+
 body {
   
-  margin-bottom: auto;
-  margin-top: 2px;
-  margin-left: 2px;
-  margin-right: 2px;
+  margin-bottom: 0.25%;
+  margin-top: 0.25%;
+  margin-left: 0.25%;
+  margin-right: 0.25%;
+  
 }
-/* ----------Header----------------------*/
+form {
+  margin: 0 auto;
+  width: 300px;
+  padding-top: 20px;
+}
+
+label {
+  line-height: 2;
+}
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+input[type="submit"] {
+  background: #283b63;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+}
+/* ----------------------------------Header----------------------*/
 header {
   background-color:turquoise;
   gap: 2%;
   align-items: center;
  
+ 
+}
+
+
+h1{
+  padding-top: 2%;
+  font-family: url('/polices/Hellobaby.ttf');
+  color: rgb(78, 114, 78);
+  text-align: center ;
+  position: relative;
+  font-size: 40px; 
 }
 
 
@@ -26,25 +62,27 @@ header a:hover {
 }
 ul, li {
   display: flex;
+  list-style-type: none;
+  justify-content: center;
   align-items: center;
-  background-color:turquoise;
+  
+  
   width: 100%;
-  height: auto;
+  height: 20px;
+}
+li:hover{
+  background-color: aliceblue;
+  color: goldenrod;
 }
 
 a {
   list-style: none;
   text-decoration: none;
-  color: white;
+ 
 }
 
 /* --------------- Navigation --------- Menu ----------*/
-/*.container {
-  max-width: 1050px;
-  width: 90%;
-  margin: auto;
-}
-*/
+
 .navbar {
   width: 100%;
   display: flex;
@@ -67,311 +105,299 @@ a {
   display: flex;
   gap: 2%;
 }
-/*
-.navbar .menu-items {
-  display: flex;
-}
 
-.navbar .nav-container li {
-  list-style: none;
-}
-
-.navbar .nav-container a {
-  text-decoration: none;
-  color: #0e2431;
-  font-weight: 500;
-  font-size: 1.2rem;
-  padding: 0.7rem;
-}
-
-.navbar .nav-container a:hover{
-    font-weight: bolder;
-}
-
-.nav-container {
-  display: block;
-  position: relative;
-  height: 80px;
-}
-
-.nav-container .checkbox {
-  position: absolute;
-  display: block;
-  height: 32px;
-  width: 32px;
-  top: 20px;
-  left: 20px;
-  z-index: 5;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.nav-container .hamburger-lines {
-  display: block;
-  height: 26px;
-  width: 32px;
-  position: absolute;
-  top: 25px;
-  left: 20px;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.nav-container .hamburger-lines .line {
-  display: block;
-  height: 4px;
-  width: 100%;
-  border-radius: 10px;
-  background: #0e2431;
-}
-
-.nav-container .hamburger-lines .line1 {
-  transform-origin: 0% 0%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line2 {
-  transition: transform 0.2s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line3 {
-  transform-origin: 0% 100%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.navbar .menu-items {
-  padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-  height: 100vh;
-  width: 100%;
-  transform: translate(-150%);
-  display: flex;
-  flex-direction: column;
-  margin-left: -40px;
-  padding-left: 50px;
-  transition: transform 0.5s ease-in-out;
-  text-align: center;
-}
-
-.navbar .menu-items li {
-  margin-bottom: 1.2rem;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.nav-container input[type="checkbox"]:checked ~ .menu-items {
-  transform: translateX(0);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
-  transform: rotate(45deg);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
-  transform: scaleY(0);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
-  transform: scaleY(1);
-}
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line4 {
-  transform: scaleY(2);
-}
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line5 {
-  transform: scaleY(3);
-}
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line6 {
-  transform: rotate(-45deg);
-}
-
-*/
-
-
-/*-----------------------*/
+/*-----logo--Image--Affiche-----------------*/
 .logo {
-  width: max-content;
-  position: sticky;
- 
-}
-.image {
-  width: auto;
-  height: auto;
-  
+  max-width : 100%;
+
   justify-content: center;
   align-items: center;
-  
-}
-.card {
-  width: 25%;
-  
-}
-.events{
-  width: 25%;
+  object-fit: contain;
 }
 
-/*main*/
+.image {
+  width : 100%;
+
+  justify-content: center;
+  align-items: center;
+   
+}
+.card {
+  max-width : 100%;
+height : auto;
+  justify-content: center;
+   align-items: center;
+   object-fit: contain;
+}
+.manif{
+  width : 10%;
+
+  justify-content: center;
+   align-items: center;
+   
+}
+.ico-categorie
+{width: 50px;
+
+}
+.fond{
+  width: 100%;
+
+}
+
+
+/*--------------------------------------main----------------------------------------------*/
+/* ---------grid------------*/
 .angry-grid {
    display: grid; 
 
    grid-template-rows: 1fr;
-   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    
    gap: 2px;
-   box-sizing: content-box;
-   
+
+  box-sizing: content-box;
   width: 100%;
+
+ 
    
 }
-  /* Nav Bar*/
+  /*------- logo-----*/
 #item-0 {
   
 
-   background-color: #8A99D9; 
-   grid-row-start: 2;
+   grid-row-start: 1;
    grid-column-start: 1;
 
-   grid-row-end: 3;
+   grid-row-end: 2;
    grid-column-end: 2;
-   ;
+
+   grid-row: 1fr;
+
+   align-content: center;
+   
+
    
 }
-/* Galerie photos roquemaure*/
+
+/* -----------Galerie photos roquemaure------------------*/
 #item-1 {
 
    background-color: #E9877E; 
-   grid-row-start: 2;
+   grid-row-start: 1;
    grid-column-start: 2;
 
-   grid-row-end: 3;
-   grid-column-end: 8;
+   grid-row-end: 2;
+   grid-column-end: 9;
 
-   display:flex;
-   justify-content: space-between;
-   align-items: center;
-   padding: 0.5%;
+   display: flex;
+   
+   
+   padding: 2px;
+align-content: space-between;
+justify-content: center;
+
+
+width: 100%;
    
 }
+
+.top
+{
+  grid-row-start: 1;
+  grid-column-start: 1;
+
+  grid-row-end: 2;
+  grid-column-end: 9;
+
+  display: flex;
+  
+  
+  padding: 2px;
+align-content: space-between;
+justify-content: center;
+
+
+width: 100%;
+
+}
+
 /* Galerie photos manifestations passées*/
 #item-2 {
 
    background-color: #9C55B7; 
-   grid-row-start: 3;
+   grid-row-start: 2;
    grid-column-start: 1;
 
-   grid-row-end: 8;
+   grid-row-end: 7;
    grid-column-end: 2;
+
+   justify-content: space-between;
+   align-items: center;
+   flex-direction: column;
+   margin-right: 1px;
+   margin-left: 1px;
+   width: 1fr;
    
    
 }
-/* Txt A propos de l'association / qui sommes-nous ?*/
+.img-about{
+  box-sizing: border-box;
+width: 100%;
+border: solid #5B6DCD 5px;
+padding: 5px;
+  
+grid-row-start: 2;
+   grid-column-start: 1;
+
+   grid-row-end: 7;
+   grid-column-end: 2;
+
+   
+  
+   display:grid;
+   
+   justify-content: space-between;
+   align-items: center;
+   flex-direction: column;
+   padding: 0px;
+}
+
+/* Txt A propos de l'association / qui sommes-nous ? + add Txt projets realises*/
 #item-3 {
 
    background-color: #7D75DA; 
-   grid-row-start: 3;
+   grid-row-start: 2;
    grid-column-start: 2;
 
    grid-row-end: 6;
    grid-column-end: 7;
 
-   background-image: url(/images/img-header.png);
+   
+background-repeat: no-repeat;
+text-align: justify;
+align-content: center;
+font-size: 20px;
+margin-left: 1px;
+margin-right: 1px;
+
 
    
 
    
 }
+
+
 /* Galerie affiches*/
 #item-4 {
 
    background-color: #677777; 
-   grid-row-start: 3;
+   grid-row-start: 2;
    grid-column-start: 7;
 
    grid-row-end: 7;
-   grid-column-end: 8;
+   grid-column-end: 9;
 
    
-   background-attachment: scroll;
+  
    display:flex;
    
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
-   padding: 0.5%;
-
+   padding: 0px;
    
-   
+  
 }
-/* Txt Les projets réalisés*/
-#item-6 {
+.aff-1{
+  box-sizing: border-box;
+width: 100%;
+border: solid #5B6DCD 5px;
+padding: 5px;
 
-   background-color: #A55D56; 
+}
+.aff-2{
+  box-sizing: border-box;
+width: 100%;
+border: solid #5B6DCD 5px;
+padding: 5px;
+
+}
+
+/* contactez-nous +   Documents d'inscriptions  */
+#item-8 {
+
+   background-color: #6555FA; 
+  
+   
+  
+   border:solid #000000;
+   justify-content: center;
+  
+   margin-left: 2px;
+   margin-right: 2px;
+
+   
    grid-row-start: 6;
    grid-column-start: 2;
 
    grid-row-end: 7;
-   grid-column-end: 7;
-   
+   grid-column-end:4;
 }
-/* Image flyer planning des manifs */
-#item-7 {
+  
+#item-8 h2{
+  text-align: center;
+}
 
-   background-color: #5FBA56; 
-   grid-row-start: 7;
-   grid-column-start: 7;
+#contactform{
+  justify-content: center;
+   
+  
+   
+  
+}
+
+#item-9 {
+
+   background-color: #598699; 
+   border:solid #000000;
+   justify-content: center;
+  
+   display: flexbox;
+   margin-left: 2px;
+   margin-right: 2px;
+
+   
+   grid-row-start: 6;
+   grid-column-start: 4;
 
    grid-row-end: 7;
-   grid-column-end: 7;
-   
+   grid-column-end:7;
 }
-/* contactez-nous */
-#item-8 {
+#item-9 h2{
+  text-align: center;
+}  
+  
+ 
 
-   background-color: #6555FA; 
+
+/* Les liens */
+#item-10 {
+   justify-content: center;
+   align-items: center;
+   display: flex;
    grid-row-start: 7;
    grid-column-start: 1;
 
    grid-row-end: 8;
-   grid-column-end: 2;
+   grid-column-end: 9;
+   background-color: turquoise;
    
 }
-/* Documents d'inscriptions */
-#item-9 {
 
-   background-color: #598699; 
-   grid-row-start: 7;
-   grid-column-start: 2;
 
-   grid-row-end: 8;
-   grid-column-end: 4;
-   
-}
-/* Les liens */
-#item-10 {
 
-  background-color: #598699; 
-  grid-row-start: 7;
-  grid-column-start: 4;
 
-  grid-row-end: 8;
-  grid-column-end: 7;
-  
-}
-
-/*footer*/
-footer {
-  width: 100%;
- 
-  background-color: turquoise;
-  
- 
-  gap: 2%;
-}
-
-footer a:hover {
-  color: cadetblue;
-}
 
 
 /* Responsive */
