--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   
   margin: 0;
   padding: 0;
-  
 }
 
 body {
@@ -14,106 +13,42 @@ body {
   margin-right: 0.25%;
   
 }
-form {
-  margin: 0 auto;
-  width: 300px;
-  padding-top: 20px;
-}
-
-label {
-  line-height: 2;
-}
-input[type="text"],
-input[type="email"],
-textarea {
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 10px;
-}
-
-input[type="submit"] {
-  background: #283b63;
-  color: white;
-  border: none;
-  padding: 5px 10px;
-}
-/* ----------------------------------Header----------------------*/
-header {
-  background-color:turquoise;
-  gap: 2%;
-  align-items: center;
- 
- 
-}
 
 
-h1{
-  padding-top: 2%;
-  font-family: url('/polices/Hellobaby.ttf');
-  color: rgb(78, 114, 78);
-  text-align: center ;
-  position: relative;
-  font-size: 40px; 
-}
+/* --------------- Navigation --------- Menu ----------*/
 
-
-header a:hover {
-  color: cadetblue;
-}
 ul, li {
   display: flex;
   list-style-type: none;
   justify-content: center;
-  align-items: center;
-  
-  
+  align-items: flex-start;
   width: 100%;
   height: 20px;
 }
-li:hover{
-  background-color: aliceblue;
-  color: goldenrod;
-}
+
 
 a {
   list-style: none;
   text-decoration: none;
- 
 }
 
-/* --------------- Navigation --------- Menu ----------*/
 
-.navbar {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  
-  font-family: 'Lobster', cursive;
-  
-  text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
-  padding: 50px;
-}
-
-.nav-container {
-  display: flex;
-  height: 80px;
-}
 
 .nav-flex {
   display: flex;
+  justify-content: space-around;
   gap: 2%;
+  flex-direction: column;
 }
 
 /*-----logo--Image--Affiche-----------------*/
 .logo {
-  max-width : 100%;
+  max-width : 100vw;
 
   justify-content: center;
   align-items: center;
   object-fit: contain;
-  position: sticky;
+  
 }
 
 .image {
@@ -139,349 +74,414 @@ height : auto;
 }
 .ico-categorie
 {width: 50px;
-
 }
-.fond{
-  width: 100%;
+.ico-categorie2
+{width: 80px;
+}
 
+
+img .bouton1
+{
+  width: 2rem;
+  
+}
+img .bouton2
+{
+  width: 2rem;
+}
+img .bouton3
+{
+  width: 2rem;
+}
+img .bouton4
+{
+  width: 2rem;
+}
+img .bouton5
+{
+  width: 2rem;
+}
+img .bouton6
+{
+  width: 2rem;
 }
 /* ---------passage zoom images------------*/
 
 
 
 /*--------------------------------------main----------------------------------------------*/
-/* ---------grid------------*/
-.angry-grid {
-   display: grid; 
+#page{
+  background-image:url('images/images/image-site.png');
+         background-repeat: no-repeat;
+         background-attachment: fixed;
+         background-size: 100% 100%;
+        
+         height: 100vw;
+        
+         
+}
 
-   grid-template-rows: 1fr;
-   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-   
-   gap: 2px;
+#titre{
+  background-color: #96FF66;
+ width: 100vw;
+height: 20vw;
+  
+    color: #333;
+    
+    padding: 20px;
+    text-align: center;
+    padding-bottom: 25vw;
+  
+  
+}
+#titre h2{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 35px;
+}
+h1{
+  font-size: 54px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: rgb(11, 167, 214);
+  text-shadow: 2px 2px #333;
+  text-align: center;
+}
+/* Les liens */
 
-  box-sizing: content-box;
-  width: 100%;
-
+#item-10 {
+  
+  width: 100vw;
+  height: 3vw;
+  
+  padding-top: 1vw;
+  background-color: #FCFF66;
+  
  
-   
 }
-  /*------- logo-----*/
-#item-0 {
+#item-10 ul{
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+}
+#item-10 li:hover{
+  background-color: transparent;
+  color: goldenrod;
+}
+#item-10 ul li a{
+  font-size: 20px;
+  justify-content: center;
+  text-align: center;
+}
+#item-10 ul li{
+  justify-content: start;
+}
+
+
+/* ------------------------------------------------------contenu secondaire--------------------------*/
+.angry-grid {
+  background-color: #58A0FF;
+  display: flexbox; 
+  width: 100vw;
+  padding-top: 2vw;
   
-
-   grid-row-start: 1;
-   grid-column-start: 1;
-
-   grid-row-end: 2;
-   grid-column-end: 2;
-
-   grid-row: 1fr;
-
-   align-content: center;
-   
-
-   
 }
 
-/* -----------Galerie photos roquemaure------------------*/
-#item-1 {
+/* ---Txt A propos de l'association / qui sommes-nous ? + 
+add Txt projets realises-------*/
 
-   background-color: #E9877E; 
-   grid-row-start: 1;
-   grid-column-start: 2;
-
-   grid-row-end: 2;
-   grid-column-end: 9;
-
-   display: flex;
-   
-   
-   padding: 2px;
-align-content: space-between;
+#item-3 {
+align-content: center;
+font-size: 20px;
+width: 100vw;
 justify-content: center;
 
+}
+
+.about{
+ background-color: #FFC966;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ padding: 6vw;
+ margin: 10vw;
+}
+
+.project{
+ background-color: #FF6672;
+display: flex;
+flex-direction: column;
+justify-content: center;
+padding: 6vw;
+margin: 10vw;
+}
+
+#item-3 h2{
+text-align: center;
+font-size: 44px;
+}
+
+#item-3 p{
+ text-align: justify;
+ font-size: 34px;
+ vertical-align: auto;
+ margin-left: auto;
+ margin-right: auto;
+ width: 75%;
+ animation-duration: 3s;
+ animation-name: slidein;
+ animation-iteration-count: 1.1;
+}
+
+@keyframes slidein {
+ from {
+   margin-left: 100%;
+   width: 300%;
+ }
+
+ to {
+   
+   text-align: justify;
+ 
+ vertical-align: auto;
+ margin-left: auto;
+   margin-right: auto;
+   width: 75%;
+ }
+}
+
+/*------------- Galerie affiches-----------------*/
+#item-4 {
+background-color: #FF6672; 
+width: 50vw;
+margin-left: 25vw;
+margin-right: 25vw;
+
+justify-content: center;
+
+padding: 3vw;
+}
+
+.aff-1{
 
 width: 100%;
+padding: 5px;
+text-align: center;
+
+}
+
+.aff-1 h2{
+  text-align: center;
+font-size: 44px;
+padding-bottom: 2vw;
+ }
+
+.aff-2{
+
+width: 100%;
+padding: 5px;
+text-align: center;
+
+}
+
+.aff-2 h2{
+  text-align: center;
+font-size: 44px;
+padding-bottom: 2vw;
+padding-top: 2vw;
+}
+
+.manif{
+  width : 10%;
+
+  justify-content: center;
+   align-items: center;
 
    
 }
 
-.top
-{
-  grid-row-start: 1;
-  grid-column-start: 1;
+.aff-1 img{
+ /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
 
-  grid-row-end: 2;
-  grid-column-end: 9;
-
-  display: flex;
-  
-  
-  padding: 2px;
-align-content: space-between;
-justify-content: center;
-
-
-width: 100%;
+-moz-transition: all 1s ease; /* Firefox */
 
 }
 
-/* Galerie photos manifestations passées*/
+.aff-1 img:hover {
+/* L'image est grossie de 25% */
+
+-moz-transform:scale(1.25); /* Firefox */
+
+}
+
+
+.aff-2 img{
+ /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
+
+-moz-transition: all 1s ease; /* Firefox */
+
+}
+
+.aff-2 img:hover {
+/* L'image est grossie de 25% */
+
+-moz-transform:scale(1.25); /* Firefox */
+
+}
+
+/* -------------------Galerie photos manifestations passées-------------------------------------*/
 #item-2 {
 
-   background-color: #9C55B7; 
-   grid-row-start: 2;
-   grid-column-start: 1;
+  background-color: #CD65FF; 
 
-   grid-row-end: 7;
-   grid-column-end: 2;
 
-   justify-content: space-between;
-   align-items: center;
-   flex-direction: column;
-   margin-right: 1px;
-   margin-left: 1px;
-   width: 1fr;
-   
-   
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-left: 25vw;
+  margin-right: 25vw;
+  width: 50vw;
+  text-align: center;
+  margin-top: 10vw;
+  padding-bottom: 2vw;
+ 
 }
 .img-about{
-  box-sizing: border-box;
+ box-sizing: border-box;
 width: 100%;
-border: solid #5B6DCD 5px;
+
 padding: 5px;
-  align-items: center;
-grid-row-start: 2;
-   grid-column-start: 1;
+ align-items: center;
 
-   grid-row-end: 7;
-   grid-column-end: 2;
-
-   
   
-   display:grid;
-   
-   justify-content: space-between;
-   align-items: center;
-   flex-direction: column;
-   
+  
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  
+}
+#item-2 h2{
+  text-align: center;
+  font-size: 44px;
+  padding-bottom: 2vw;
+  padding-top: 2vw;
 }
 
+
 .img-about img{
-  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
+ /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
 
 -moz-animation: all 1s ease; /* Firefox */
 
 }
-.image-about:hover img {
-/* L'image est grossie de 25% */
+.image-about img:hover {
+/* L'image est grossie de 50% */
 
--moz-transform:scale(1.25); /* Firefox */
-
-}
-
-
-/* Txt A propos de l'association / qui sommes-nous ? + add Txt projets realises*/
-#item-3 {
-
-   background-color: #7D75DA; 
-   grid-row-start: 2;
-   grid-column-start: 2;
-
-   grid-row-end: 6;
-   grid-column-end: 7;
-
-   
-
-
-align-content: center;
-font-size: 20px;
-margin-left: 1px;
-margin-right: 1px;
-
-
-   
-
-   
-}
-#item-3 h2{
-text-align: center;
-}
-#item-3 p{
-  text-align: justify;
-  
-  vertical-align: auto;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
- 
-
-    animation-duration: 3s;
-    animation-name: slidein;
-    animation-iteration-count: 1.1;
-
-   
-}
-@keyframes slidein {
-  from {
-    margin-left: 100%;
-    width: 300%;
-  }
-
-  to {
-    
-    text-align: justify;
-  
-  vertical-align: auto;
-  margin-left: auto;
-    margin-right: auto;
-    width: 75%;
-  }
-}
-
-
-/* Galerie affiches*/
-#item-4 {
-
-   background-color: #677777; 
-   grid-row-start: 2;
-   grid-column-start: 7;
-
-   grid-row-end: 7;
-   grid-column-end: 9;
-
-   
-  
-   display:flex;
-   
-   justify-content: space-between;
-   
-   flex-direction: column;
-   padding: 0px;
-   
-  
-}
-.aff-1{
-  box-sizing: border-box;
-width: 100%;
-border: solid #5B6DCD 5px;
-padding: 5px;
-text-align: center;
-
-}
-.aff-2{
-  box-sizing: border-box;
-width: 100%;
-border: solid #5B6DCD 5px;
-padding: 5px;
-text-align: center;
-
-}
-.aff-1 img{
-  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
-
--moz-transition: all 1s ease; /* Firefox */
-
-}
-.aff-1:hover img {
-/* L'image est grossie de 25% */
-
--moz-transform:scale(1.25); /* Firefox */
-
-}
-.aff-2 img{
-  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
-
--moz-transition: all 1s ease; /* Firefox */
-
-}
-.aff-2:hover img {
-/* L'image est grossie de 25% */
-
--moz-transform:scale(1.25); /* Firefox */
+-moz-transform:scale(1.50); /* Firefox */
 
 }
 
-
-
-/* contactez-nous +   Documents d'inscriptions  */
+/* ----------------------------contactez-nous--------------------  */
 #item-8 {
 
-   background-color: #6555FA; 
+  background-color: #FCFF66; 
+ width: 40vw;
+ 
+ 
   
-   
-  
-   border:solid #000000;
-   justify-content: center;
-  
-   margin-left: 2px;
-   margin-right: 2px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+ 
+  margin-left: 30vw;
+  margin-right: 30vw;
 
-   
-   grid-row-start: 6;
-   grid-column-start: 2;
-
-   grid-row-end: 7;
-   grid-column-end:4;
+  margin-top: 3vw;
+  
 }
-  
+ 
 #item-8 h2{
   text-align: center;
+font-size: 44px;
+
+padding-top: 2vw;
 }
 
-#contactform{
+#contactForm{
+ justify-content: center;
+ padding-bottom: 1vw;
+  
+}
+
+
+form {
+  margin: 2vw auto;
+  width: 30vw;
+  padding-top: 20px;
+  text-size-adjust: 12px  ;
+  
+}
+
+label {
+  line-height: 2;
+  
+  
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+input[type="submit"] {
+  background: #283b63;
+  color: white;
+  border: none;
+ 
+  padding: 5px 10px;
+}
+
+ /*---------------  Documents d'inscriptions--------------------*/
+ #item-9 {
+
+  background-color: #96FF66; 
+ 
   justify-content: center;
-   
-  
-   
-  
-}
-
-#item-9 {
-
-   background-color: #598699; 
-   border:solid #000000;
-   justify-content: center;
-  
-   display: flexbox;
-   margin-left: 2px;
-   margin-right: 2px;
-
-   
-   grid-row-start: 6;
-   grid-column-start: 4;
-
-   grid-row-end: 7;
-   grid-column-end:7;
-   justify-content: center;
+ width: 50vw;
+  display: flex;
+  flex-direction: column;
+  margin-left: 25vw;
+  margin-right: 25vw;
+  margin-top: 10vw;
+  padding-bottom: 2vw;
 }
 #item-9 h2{
   text-align: center;
-}  
+  font-size: 44px;
+  padding-bottom: 2vw;
+  padding-top: 1vw;
+} 
+.telecharge li a{
+  font-size: 20px;
+  color: black;
   
-#item-9 ul{
-  
-  display: grid;
-  
-}  
-  
-
-
-/* Les liens */
-#item-10 {
-   justify-content: center;
-   align-items: center;
-   display: flex;
-   grid-row-start: 7;
-   grid-column-start: 1;
-
-   grid-row-end: 8;
-   grid-column-end: 9;
-   background-color: turquoise;
-   
 }
+.telecharge li a:hover{
+  color: goldenrod;
+}
+.envoi-docs li a{
+  font-size: 20px;
+  color: black;
 
-
+} 
+.envoi-docs li a:hover{
+  color: goldenrod;
+  
+}
+ 
 
 
 
