--- a/style.css
+++ b/style.css
@@ -47,40 +47,62 @@ img .bouton{
 }
 .nav-flex{
   text-align: end;
-  font-size: 10%;
-  margin-right: 0;
-  margin-left: 30%;
-  padding-top: 6%;
+  
+  margin-right: 2vw;
+  margin-left: 30vw;
+  padding-top: 7vw;
   
 }
 .bouton1{
-  width: 30%;
+  width: 22%;
   position: sticky;
+  
   
   
   
 }
 .bouton2{
-  width: 30%;
+  width: 22%;
   position: sticky;
+  margin-left: 5vw;
+  margin-right: 5vw;
+ 
   
 }
 .bouton3{
-  width: 30%;
+  width: 22%;
   position: sticky;
+  margin-top: 3vw;
+  
 }
 .bouton4{
-  width: 30%;
+  width: 22%;
   position: sticky;
+  margin-left: 2vw;
 }
 .bouton5{
-  width: 30%;
+  width: 22%;
   position: sticky;
+  margin-right: 5vw;
+  margin-left: 5vw;
 }
 .bouton6{
-  width: 30%;
+  width: 22%;
+  position: sticky;
+  margin-right: 0vw;
+  margin-top: 5vw;
+}
+.bouton6{
+  width: 22%;
   position: sticky;
 }
+.bouton7{
+  width: 22%;
+  position: relative;
+  margin-top: 5vw;
+  
+}
+
 
 /*-----logo--Image--Affiche-----------------*/
 .logo {
@@ -119,11 +141,13 @@ height : auto;
 {width: 10%;
   padding-right: 2%;
   text-align: center;
+  vertical-align: -1vw;
 }
 .ico-categorie2
-{width: 12%;
+{width: 14%;
   padding-right: 2%;
   text-align: center;
+  vertical-align: -1vw;
 }
 
 
@@ -140,8 +164,8 @@ height : auto;
          background-attachment: fixed;
          background-size: 100% 100%;
         
-         height: 100%;
-         padding-bottom: 1%;
+         height: 100vw;
+         
         
          
 }
@@ -176,6 +200,9 @@ height : auto;
    
     
   }
+  #titre h2 img{
+    vertical-align: -10vw;
+  }
 
 /* Les liens */
 
@@ -201,7 +228,7 @@ height : auto;
   color: goldenrod;
 }
 #item-10 ul li a{
-  font-size: 1.2em;
+  font-size: 1.5em;
   justify-content: center;
   text-align: center;
   
@@ -210,7 +237,7 @@ height : auto;
   justify-content: start;
 }
 #item-10 ul li a img{
-  vertical-align: -10px;
+  vertical-align: -9px;
   
 }
 
@@ -313,7 +340,7 @@ font-family: 'Spicy Rice', cursive;
 
 /*------------- Galerie affiches-----------------*/
 #item-4 {
-background: linear-gradient(105deg, orange 50%, cyan);; 
+background: linear-gradient(105deg, orange 50%, rgb(137, 143, 104));; 
 width: 40%;
 max-height: 50vw;
 margin-left: 30%;
@@ -343,9 +370,10 @@ width: 100%;
 
 .aff-1 h2{
   text-align: center;
-font-size: 2.1em;
+font-size: 2.2em;
 padding-bottom: 2vw;
 font-family: 'Spicy Rice', cursive;
+text-decoration: red wavy underline;
  }
 
 .aff-2{
@@ -361,6 +389,7 @@ font-size: 2.1em;
 padding-bottom: 2vw;
 padding-top: 2vw;
 font-family: 'Spicy Rice', cursive;
+text-decoration: red wavy underline;
 }
 
 .manif{
@@ -403,10 +432,10 @@ font-family: 'Spicy Rice', cursive;
 
 /* -------------------Galerie photos manifestations passées-------------------------------------*/
 #item-2 {
-  background: linear-gradient(135deg, #CD65FF 50%, cyan);
+  background: linear-gradient(135deg, rgb(122, 174, 122) 50%, cyan);
   max-height: 50vw;
   overflow-y: scroll;
-
+  
   width: 40%;
   margin-left: 30%;
   margin-right: 30%;
@@ -424,7 +453,12 @@ border:solid 5px hsla(0, 95%, 35%, 1);
  box-sizing: border-box;
 width: 100%;
 
+
   
+}
+.image-about img{
+  width: 50%;
+  height: auto;
 }
 
 #item-2 h2{
@@ -433,6 +467,7 @@ width: 100%;
   padding-bottom: 2vw;
   padding-top: 2vw;
   font-family: 'Spicy Rice', cursive;
+  text-decoration: red wavy underline;
 }
 
 
@@ -569,10 +604,12 @@ border-top-right-radius: 4% 4%;
   font-size: 2.1em;
   padding-bottom: 2vw;
   padding-top: 1vw;
+  text-decoration: red wavy underline;
 } 
 .telecharge li a{
   font-size: 1.6em;
   color: black;
+  text-shadow: #FC0 1px 0 10px;
   
 }
 .telecharge li a:hover{
@@ -581,6 +618,7 @@ border-top-right-radius: 4% 4%;
 .envoi-docs li a{
   font-size: 1.6em;
   color: black;
+  text-shadow: #FC0 1px 0 10px;
 
 } 
 .envoi-docs li a:hover{
