--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ height : auto;
          background-attachment: fixed;
          background-size: 100% 100%;
         
-         height: 100vw;
+         height: 100vh;
          
         
          
@@ -669,7 +669,7 @@ border-top-right-radius: 4% 4%;
 }
 
 
-/* ------------------Responsive------------------------- */
+/* -----------------------------------------------------Responsive------------------------- */
 
 @media screen and (max-width: 700px) {
   #page{
