--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ text-decoration: red wavy underline;
 
 /* -------------------Galerie photos manifestations passées-------------------------------------*/
 #item-2 {
-  background-color: 	#ff6347;
+  background-color: 	#F09154;
   max-height: 50vw;
   overflow-y: scroll;
   
@@ -496,8 +496,8 @@ width: 100%;
 .image-about img:hover {
 /* L'image est grossie de 50% */
 
--moz-transform:scale(1.25); /* Firefox */
--webkit-transform: scale(1.25);/*Chrome*/
+-moz-transform:scale(1.50); /* Firefox */
+-webkit-transform: scale(1.50);/*Chrome*/
 }
 
 /* ----------------------------contactez-nous--------------------  */
@@ -594,7 +594,7 @@ input[type="submit"] {
  
  #item-9 {
 
-  background-color: #96FF66; 
+  background-color: #F29C94; 
   
  background-image: url(images/images/docs-fond2.png);
  background-repeat: no-repeat;
